--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
     modImplementation include("com.github.Chocohead:Fabric-ASM:v2.3")
+    modImplementation include(annotationProcessor("io.github.llamalad7:mixinextras-fabric:0.3.5"))
 }
 
 processResources {
